@@ -2,26 +2,72 @@ import javafx.application.Application;
 import javafx.scene.Scene;
 import javafx.scene.control.Button;
 import javafx.scene.control.Label;
+import javafx.scene.image.Image;
+import javafx.scene.image.ImageView;
+import javafx.scene.layout.StackPane;
 import javafx.scene.layout.VBox;
 import javafx.stage.Stage;
+import javafx.scene.media.Media;
+import javafx.scene.media.MediaPlayer;
+import java.io.File;
 
 public class How_Its_done extends Application {
+    private MediaPlayer mediaPlayer;
+
     @Override
     public void start(Stage stage) {
-        VBox root = new VBox(20);
-        root.setStyle("-fx-alignment: center; -fx-padding: 50;");
-        Label label = new Label("How It's Done Song Screen");
+        // --- 배경 이미지 설정 ---
+        Image backgroundImage = new Image(new File("../resources/img/game_Background/Howitsdone_Background.png").toURI().toString());
+        ImageView backgroundView = new ImageView(backgroundImage);
+        backgroundView.setFitWidth(800);  // Main과 동일한 창 크기
+        backgroundView.setFitHeight(600);
+        backgroundView.setPreserveRatio(false); // 비율 고정 X (화면에 딱 맞춤)
+
+        // --- UI 구성 ---
+        VBox content = new VBox(20);
+        content.setStyle("-fx-alignment: center; -fx-padding: 50;");
+        Label label = new Label("How Its done Screen");
         Button back = new Button("Back");
+
         back.setOnAction(e -> {
+            if (mediaPlayer != null) {
+                mediaPlayer.stop(); // 노래 정지
+            }
             try {
                 new SelectSong().start(new Stage());
                 stage.close();
-            } catch (Exception ex) { ex.printStackTrace(); }
+            } catch (Exception ex) {
+                ex.printStackTrace();
+            }
         });
-        root.getChildren().addAll(label, back);
 
-        stage.setTitle("How It's Done");
+        content.getChildren().addAll(label, back);
+
+        // --- 배경과 내용 겹치기 ---
+        StackPane root = new StackPane();
+        root.getChildren().addAll(backgroundView, content);
+
+        // --- 노래 재생 ---
+        try {
+            Media media = new Media(new File("../resources/music/HowIt'sdone.mp3").toURI().toString());
+            mediaPlayer = new MediaPlayer(media);
+            mediaPlayer.setCycleCount(MediaPlayer.INDEFINITE); // 반복재생
+            mediaPlayer.play();
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+
+        // --- Stage 설정 ---
+        stage.setTitle("How_Its_done");
         stage.setScene(new Scene(root, 400, 300));
         stage.show();
     }
+
+    public static void main(String[] args) {
+        launch(args);
+    }
 }
+
+
+// javac --module-path "C:\javafx-sdk-17.0.16\lib" --add-modules javafx.controls,javafx.media -encoding UTF-8 -d ../out How_Its_done.java
+// java --module-path "C:\javafx-sdk-17.0.16\lib" --add-modules javafx.controls,javafx.media -cp ../out How_Its_done.java
